# hypercube

./: .dockerignore  .gitignore  Dockerfile  README.md  master.Dockerfile  pylintrc  requirements.txt  run_master  run_slave  slave.Dockerfile
.github/workflows/: main.yml  pull_requests.yml
docs/: .index.html.un~  Gemfile  index.html
docs/_posts/: 2020-04-21-welcome-to-jekyll.markdown
src/: .coveragerc  jobfile  slave_app_ex.sh
src/api/: api.py  example_graphics_task.json
src/app/: main.cpp
src/client/: client.cpp  message.py  slave.py
src/common/: job.py  logging.py  message.py  networking.py  task.py
src/common/api/: endpoints.py  example_graphics_task.json  example_job.json  graphics_payload.json  new_job.json  types.py
src/master/: __init__.py  connection.py  connection_manager.py  master.py  status_manager.py  task_manager.py
src/master_app_ex/: app.py
src/server/: hello  hello.go  job  listen  listen.go  master.py  message.py
src/slave/: heartbeat.py  slave.py  test.py
src/slave_app/: CMakeLists.txt  main.cpp
src/slave_app/include/BRDFs/: lambertian.hpp
src/slave_app/include/cameras/: pinhole.hpp
src/slave_app/include/materials/: matte.hpp
src/slave_app/include/objects/: sphere.hpp
src/slave_app/include/structures/: world.hpp
src/slave_app/include/tracers/: tracer.hpp
src/slave_app/include/types/: atlas_types.hpp
src/slave_app/include/utils/: parser.hpp
src/test/: test_api.py
src/tests/: requirements.txt
src/tests/common_tests/: test_logging.py  test_networking.py
src/tests/master_tests/: test_connection.py  (+4 more)
(+5 files in other folders)
